--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
   function sendEmail(){
     Email.send({
         Host : "smtp.gmail.com",
-        Username : "finalyearsymposium@gmail.com",
-        Password : "Symposium@2023",
+        Username : "finalyearsium@gmail.com",
+        Password : "Sympos",
         To : 'maheshwaran101002@gmail.com',
         From : document.getElementById("email").value,
         Subject : "New Contact Form Enquiry",
